--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/0.jpeg" alt="" /></span>
 							<h1 id="title">Zach Rooney</h1>
-							<p>Student of Master of Science in Computer Science (ALIGN) at Northeastern University, Silicon Valley Campus</p>
+							<p>Graduate Student Studying Master of Science in Computer Science (ALIGN) at Northeastern University, Silicon Valley Campus</p>
 						</div>
 
 					<!-- Nav -->
