Changed Title and removed links not used

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/0.jpeg" alt="" /></span>
 							<h1 id="title">Zach Rooney</h1>
-							<p>Graduate Student Studying Master of Science in Computer Science (ALIGN) at Northeastern University, Silicon Valley Campus</p>
+							<p>Computer Science Graduate Student at Northeastern University, Silicon Valley Campus</p>
 						</div>
 
 					<!-- Nav -->
@@ -41,10 +41,7 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
+							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
