--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">My Portfolio</a>
 							</footer>
 
 						</div>
