--- a/index.html
+++ b/index.html
@@ -57,10 +57,8 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+                                <h2 class="alt">Hi! I'm <strong>Prologue</strong>, a student of Computer Science. <br /> </h2>
+								<p>Take a look at my portfolio for examples of some of my work</p>
 							</header>
 
 							<footer>
