name added to prolouge

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<div class="container">
 
 							<header>
-                                <h2 class="alt">Hi! I'm <strong>Prologue</strong>, a student of Computer Science. <br /> </h2>
+                                <h2 class="alt">Hi! I'm <strong>Zach Roney</strong>, a student of Computer Science. <br /> </h2>
 								<p>Take a look at my portfolio for examples of some of my work</p>
 							</header>
 
