--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Zach Rooney's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -57,7 +57,7 @@
 						<div class="container">
 
 							<header>
-                                <h2 class="alt">Hi! I'm <strong>Zach Roney</strong>, a student of Computer Science. <br /> </h2>
+                                <h2 class="alt">Hi! I'm <strong>Zach Rooney</strong>, a student of Computer Science. <br /> </h2>
 								<p>Take a look at my portfolio for examples of some of my work</p>
 							</header>
 
