--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/computergraph.jpeg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/hand.jpg" alt="" /></a>
 										<header>
 											<h3>Rhoncus Semper</h3>
 										</header>
@@ -134,7 +134,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/glasses.jpeg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/information.jpg" alt="" /></a>
 
 							<p> Put Stuff About me Here</p>
 
