--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/bluelines.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/bluelines.jpeg" alt="" /></a>
 										<header>
 											<h3>Magna Nullam</h3>
 										</header>
@@ -134,7 +134,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/information.jpg" alt="" /></a>
+							<a href="#" class="image fit"><img src="images/information.jpg" alt="" /></a>
 
 							<p> Put Stuff About me Here</p>
 
