--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image fit"><img src="images/information.jpg" alt="" /></a>
+							<a href="#" class="image fit"><img src="images/information.jpg" alt="" height="42" width="42"/></a>
 
 							<p> Put Stuff About me Here</p>
 
