--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/coloredlines.jpeg" alt="" /></a>
+										<a href="https://github.com/Work-Portfolio/BasicThreading" class="image fit"><img src="images/coloredlines.jpeg" alt="" /></a>
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3>Basic Threading in C</h3>
 										</header>
 									</article>
 								</div>
