All links added

--- a/index.html
+++ b/index.html
@@ -81,43 +81,43 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/bluecode.jpeg" alt="" /></a>
+										<a href="https://github.com/Work-Portfolio/LazyBST.git" class="image fit"><img src="images/bluecode.jpeg" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3>LazyBST(Java)</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/hand.jpg" alt="" /></a>
+										<a href="https://github.com/Work-Portfolio/quicksort_analysis.git" class="image fit"><img src="images/hand.jpg" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
-										</header>
-									</article>
-								</div>
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/bluelines.jpeg" alt="" /></a>
-										<header>
-											<h3>Magna Nullam</h3>
-										</header>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/coloredcode.jpeg" alt="" /></a>
-										<header>
-											<h3>Natoque Vitae</h3>
+											<h3>Quicksort Analysis(Java)</h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/digital-dreams.jpg" alt="" /></a>
+										<a href="https://github.com/Work-Portfolio/CustomAlgorithm.git" class="image fit"><img src="images/bluelines.jpeg" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3>Custom Algorithm(Java)</h3>
+										</header>
+									</article>
+									<article class="item">
+										<a href="https://github.com/Work-Portfolio/minHeap.git" class="image fit"><img src="images/coloredcode.jpeg" alt="" /></a>
+										<header>
+											<h3>MinHeap(Java)</h3>
+										</header>
+									</article>
+								</div>
+								<div class="col-4 col-12-mobile">
+									<article class="item">
+										<a href="https://github.com/Work-Portfolio/HashingProject.git" class="image fit"><img src="images/digital-dreams.jpg" alt="" /></a>
+										<header>
+											<h3>Hashing Project(Java)</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="https://github.com/Work-Portfolio/BasicThreading" class="image fit"><img src="images/coloredlines.jpeg" alt="" /></a>
 										<header>
-											<h3>Basic Threading in C</h3>
+											<h3>Basic Threading(C)</h3>
 										</header>
 									</article>
 								</div>
