--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.linkedin.com/in/zachrooney/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="mailto: zachary.rooney@mac.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
@@ -149,14 +149,10 @@
 								<h2>Contact Me</h2>
 							</header>
 
-							<p> </p>
+							<p> <br> </p>
 
-							<ul class="icons">
-								<li><a href="#" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-								<li><a href="mailto: zachary.rooney@mac.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-							</ul>
-
-							<a href = "mailto: zachary.rooney@mac.com">Send Email</a>
+							<a href = "mailto: zachary.rooney@mac.com">Send Email <br></a>
+							<a href = "https://www.linkedin.com/in/zachrooney/">LinkedIn <br></a>
 
 			</div>
 
