--- a/index.html
+++ b/index.html
@@ -149,22 +149,11 @@
 								<h2>Contact Me</h2>
 							</header>
 
-							<p> <br> </p>
-
-							<a href = "mailto: zachary.rooney@mac.com">Send Email <br></a>
-							<a href = "https://www.linkedin.com/in/zachrooney/">LinkedIn <br></a>
+							<a href = "mailto: zachary.rooney@mac.com">Send Email <br><br></a>
+							<a href = "https://www.linkedin.com/in/zachrooney/"><br>LinkedIn</a>
 
 			</div>
 
-		<!-- Footer -->
-			<div id="footer">
-
-				<!-- Copyright -->
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-
-			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
