About me first draft

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>These are some of the projects that I have done over the course of my studies</p>
+							<p>These are some of the projects that I have done over the course of my studies. I have tried to diversify my portofolio
+							with data structures, algorithms, and systems examples but I have others upon request. My first language is Java
+							so most of my projects are done in that language but I do have exprience with Python, C, Swift, and MIPS as well. Take a look!</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
@@ -136,8 +138,12 @@
 
 							<a /a>
 
-							<p> Put Stuff About me Here</p>
-
+							<p> I have a Bachelors of Arts in Integrative Physiology. After working for a few years, I did not find a career type job
+							in the health field so I decided to pursue my other passsion, computer science. I went back to school and got an Associates of Science
+						  Degree in Computer Science. I am currently studying for my Master's Degree in Computer Science at Northeastern University's Silicon
+						  Valley campus. I enjoy learning and am looking for an internship that would allow me to gain more hands on experience and allow me
+						  to put concepts that I have learned into practice </p>
+							
 						</div>
 					</section>
 
@@ -149,7 +155,7 @@
 								<h2>Contact Me</h2>
 							</header>
 
-							<a href = "mailto: zachary.rooney@mac.com">Send Email <br><br></a>
+							<a href = "mailto: zachary.rooney@mac.com">Send Email <br></a>
 							<a href = "https://www.linkedin.com/in/zachrooney/"><br>LinkedIn</a>
 
 			</div>
