About me changes

--- a/index.html
+++ b/index.html
@@ -138,12 +138,15 @@
 
 							<a /a>
 
-							<p> I have a Bachelors of Arts in Integrative Physiology. After working for a few years, I did not find a career type job
-							in the health field so I decided to pursue my other passsion, computer science. I went back to school and got an Associates of Science
-						  Degree in Computer Science. I am currently studying for my Master's Degree in Computer Science at Northeastern University's Silicon
-						  Valley campus. I enjoy learning and am looking for an internship that would allow me to gain more hands on experience and allow me
-						  to put concepts that I have learned into practice </p>
-							
+							<p> My name is Zach Rooney. I am currently pursuing a Master’s Degree in Computer Science at the Northeastern University.
+								I enjoy learning new ideas and how things work, then seeing if there is a way to fix or improve it. I like helping people
+								whether it is a coworker or working on something that will improve quality of life for someone. I have a Bachelor’s degree
+							  in physiology and worked in the health care industry for several years but didn’t find a career type job. So, I decided to
+								go back to school to study my other passion, computer science. I am interested in several areas within computer science. I
+								have knowledge of several programming languages, computer systems, and computer networking. Ideally I would like to find a
+								job that would incorporate both of my interests, physiology and computer science, but am interested in other applications
+								of computer science as well. </p>
+
 						</div>
 					</section>
 
