portofolio intro modified

--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 							</header>
 
 							<p>These are some of the projects that I have done over the course of my studies. I have tried to diversify my portofolio
-							with data structures, algorithms, and systems examples but I have others upon request. My first language is Java
-							so most of my projects are done in that language but I do have exprience with Python, C, Swift, and MIPS as well. Take a look!</p>
+							with data structures, algorithms, and computer systems examples (with others available upon request). My first language is
+							Java so most of my projects are done in that language but I do have exprience with Python, C, Swift, and MIPS as well. Take a look!</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
