--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>These are some of the projects that I have done over the course of my studies. I have tried to diversify my portofolio
-							with data structures, algorithms, and computer systems examples (with others available upon request). My first language is
-							Java so most of my projects are done in that language but I do have exprience with Python, C, Swift, and MIPS as well. Take a look!</p>
+							<p>These are some of the projects that I have done over the course of my studies. I have diversified my portofolio
+							with data structures, algorithms, and computer systems examples (others available upon request). My first language is
+							Java so most of my projects are done in that language but I also have exprience with Python, C, Swift, and MIPS as well. Take a look!</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
@@ -135,8 +135,6 @@
 							<header>
 								<h2>About Me</h2>
 							</header>
-
-							<a /a>
 
 							<p> My name is Zach Rooney. I am currently pursuing a Master’s Degree in Computer Science at the Northeastern University.
 								I enjoy learning new ideas and how things work, then seeing if there is a way to fix or improve it. I like helping people
