--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 								<h2>Contact Me</h2>
 							</header>
 
-							<a href = "mailto: zachary.rooney@mac.com">Send Email <br></a>
+							<a href = "mailto: zachary.rooney@northeastern.edu">Send Email <br></a>
 							<a href = "https://www.linkedin.com/in/zachrooney/"><br>LinkedIn</a>
 
 			</div>
