--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/0.jpeg" alt="" /></span>
 							<h1 id="title">Zach Rooney</h1>
-							<p>     Computer Science Student</p>
+							<p>     MS Computer Sciencet</p>
 						</div>
 
 					<!-- Nav -->
@@ -57,7 +57,7 @@
 						<div class="container">
 
 							<header>
-                                <h2 class="alt">Hi! I'm <strong>Zach Rooney</strong>, a student of Computer Science. <br /> </h2>
+                                <h2 class="alt">Hi! I'm <strong>Zach Rooney</strong>, a recent Masters of Science in Computer Science graduate. <br /> </h2>
 								<p>Take a look at my portfolio for examples of some of my work</p>
 							</header>
 
@@ -136,10 +136,10 @@
 								<h2>About Me</h2>
 							</header>
 
-							<p> My name is Zach Rooney. I am currently pursuing a Master’s Degree in Computer Science at the Northeastern University.
+							<p> My name is Zach Rooney. I am a recent MSCS graduate from Northeastern University.
 								I enjoy learning new ideas and how things work, then seeing if there is a way to fix or improve it. I like helping people
 								whether it is a coworker or working on something that will improve quality of life for someone. I have a Bachelor’s degree
-							  in physiology and worked in the health care industry for several years but didn’t find a career type job. So, I decided to
+							  	in physiology and worked in the health care industry for several years but didn’t find a career type job. So, I decided to
 								go back to school to study my other passion, computer science. I am interested in several areas within computer science. I
 								have knowledge of several programming languages, computer systems, and computer networking. Ideally I would like to find a
 								job that would incorporate both of my interests, physiology and computer science, but am interested in other applications
