--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div id="logo">
 							<span class="image avatar48"><img src="images/0.jpeg" alt="" /></span>
 							<h1 id="title">Zach Rooney</h1>
-							<p>     MS Computer Sciencet</p>
+							<p>     MS Computer Science</p>
 						</div>
 
 					<!-- Nav -->
