--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 							<header>
                                 <h2 class="alt">Hi! I'm <strong>Zach Rooney</strong>, a recent Masters of Science in Computer Science graduate. <br /> </h2>
-								<p>Take a look at my portfolio for examples of some of my work</p>
+								<p>Take a look at my portfolio for examples of some of my work!</p>
 							</header>
 
 							<footer>
