--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>These are some of the projects that I have done over the course of my studies. I have diversified my portofolio
+							<p>These are some of the projects that I have done over the course of my studies. I have diversified my portfolio
 							with data structures, algorithms, and computer systems examples (others available upon request). My first language is
 							Java so most of my projects are done in that language but I also have exprience with Python, C, Swift, and MIPS as well. Take a look!</p>
 
